<resources>
    <string name="app_name">ChiHuoBao</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
<<<<<<< HEAD
    <string name="title_activity_main2">Main2Activity</string>
    <string-array name="array_names">
        <item>"Anastasia Druzhinina"</item>
        <item>"Andriy Hristyan"</item>
        <item>"Dmitriy Dovbnya"</item>
        <item>"Dmitry Denisenko"</item>
        <item>"Eduard Baev"</item>
        <item>"Iliya Bershadskiy"</item>
        <item>"Kirill Penzykov"</item>
        <item>"Konstantin Rudenko"</item>
        <item>"Oleksii Shliama"</item>
        <item>"Pavel Apisov"</item>
        <item>"Vadim Ooleynik"</item>
    </string-array>
    <string name="title_activity_deliver_man">DeliverManActivity</string>

    <string name="logout">退出登录</string>
    <string name="notification_vibration">提示振动</string>
    <string-array name="foodType">
        <item>套餐一</item>
        <item>套餐二</item>
        <item>套餐三</item>
        <item>套餐四</item>
        <item>套餐五</item>
    </string-array>
=======
<<<<<<< HEAD
    <string name="title_activity_order">OrderActivity</string>
=======
    <string name="contact_manager">联系市场经理</string>
    <string name="contact_service">联系客服</string>
    <string name="help">帮助与反馈</string>
    <string name="version">系统版本</string>
    <string name="logout">退出登录</string>
    <string name="content_edit_hint">请输入你的建议，谢谢！</string>
    <string name="mobile_number">电话</string>
    <string name="mobile_number_hint">请输入电话</string>
>>>>>>> 134a044af15af39b80a3277b1958819703564be4
>>>>>>> 65273b4fcd7c6bed09d71827c3a6bf4c37bc48c4
</resources>
