<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/spec_gray">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/restaurant_info_container"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/setting_info_container_height"
                android:background="@color/napos_dark_sky_blue"
                android:gravity="center"
                android:paddingLeft="@dimen/common_margin_size"
                android:paddingRight="@dimen/common_margin_size">

                <ImageView
                    android:id="@+id/iv_restaurant_icon"
                    android:layout_width="@dimen/setting_restaurant_icon_size"
                    android:layout_height="@dimen/setting_restaurant_icon_size"
                    android:layout_marginRight="@dimen/common_margin_size"
                    android:src="@drawable/icon_restaurant_photo_default" />

                <LinearLayout
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_restaurant_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textColor="@color/spec_white"
                        android:textSize="@dimen/spec_large" />

                    <TextView
                        android:id="@+id/tv_owner_phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.0dip"
                        android:drawableLeft="@drawable/icon_setting_phone"
                        android:drawablePadding="@dimen/spec_line_margin_half"
                        android:singleLine="true"
                        android:textColor="@color/spec_white"
                        android:textSize="@dimen/spec_mini"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_owner_cardnumber"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8.0dip"
                        android:drawableLeft="@drawable/icon_setting_card"
                        android:drawablePadding="@dimen/spec_line_margin_half"
                        android:singleLine="true"
                        android:textColor="@color/spec_white"
                        android:textSize="@dimen/spec_mini"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5.0dip"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_setting_right_arraw" />
            </LinearLayout>
            <!-- 推荐给微信好友 -->

            <RelativeLayout
                android:id="@+id/recommond_to_weixin_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:background="@drawable/setting_bg" >

                <TextView
                    android:id="@+id/settings_connect_manager"
                    style="@style/setting_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_manager" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dip"
                    android:src="@drawable/setting_arrow" />
            </RelativeLayout>

            <!-- 反馈意见  关于我们  应用推荐 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/setting_bg"
                android:layout_marginBottom="20dip"
                android:orientation="vertical" >

                <!-- 反馈意见 -->

                <RelativeLayout
                    android:id="@+id/feedback_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/setting_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_service" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dip"
                        android:src="@drawable/setting_arrow" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/app_bg" />

                <!-- 关于我们 -->

                <RelativeLayout
                    android:id="@+id/about_us_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/setting_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/help" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dip"
                        android:src="@drawable/setting_arrow" />
                </RelativeLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:background="@color/app_bg" />

                <!-- 应用推荐 -->

                <RelativeLayout
                    android:id="@+id/app_recommend_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/setting_text_style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dip"
                        android:src="@drawable/setting_arrow" />
                </RelativeLayout>
            </LinearLayout>

            <!-- 清除缓存 -->

            <RelativeLayout
                android:id="@+id/clear_cache_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:background="@drawable/setting_bg" >

                <TextView
                    style="@style/setting_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dip"
                    android:src="@drawable/setting_arrow" />
            </RelativeLayout>

        </LinearLayout>




</ScrollView>